--- a/modality-crm/modality-crm-frontoffice-activity-userprofile-plugin/src/main/webfx/css/modality-front-office-userprofile-web@main.css
+++ b/modality-crm/modality-crm-frontoffice-activity-userprofile-plugin/src/main/webfx/css/modality-front-office-userprofile-web@main.css
@@ -1,7 +1,6 @@
 .user-profile-modal-window {
-    background-image: none;
-    background-color: rgba(255, 255, 255, 1); /* Add alpha for transparency */
-    border: 1px solid lightgray; /* Combine border-color and border width */
+    background-color: white;
+    border: 1px solid lightgray;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px lightgray; /* Corrected drop shadow syntax */
+    box-shadow: 0 0 10px lightgray;
 }
